--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 					<img src="../static/img/letter-a.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="" method="post">
+				<form class="login100-form validate-form" action="/verifylogin" method="post">
 					<span class="login100-form-title">
 						Member Login
 					</span>
