--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 					<img src="../static/img/letter-a.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="/verifylogin" method="post">
+				<form class="login100-form validate-form" action="/verify_login" method="post">
 					<span class="login100-form-title">
 						Member Login
 					</span>
@@ -58,7 +58,12 @@
 							Login
 						</button>
 					</div>
-
+					<div class="text-center p-t-16">
+						<a class="txt2" href="/signup">
+							Sign Up
+							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						</a>
+					</div>
           <br>
           <br>
           <br>
