working backend for login and signup

--- a/templates/identify.html
+++ b/templates/identify.html
@@ -32,7 +32,7 @@
 					<img src="../static/img/letter-a.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="/credentials" method="post">
+				<form class="login100-form validate-form" action="/check_user" method="post">
 					<span class="login100-form-title">
 						Enter email
 					</span>
