--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 					<img src="../static/img/letter-a.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="/verify_login" method="post">
+				<form class="login100-form validate-form" action="/verify_user" method="post">
 					<span class="login100-form-title">
 						Member Login
 					</span>
@@ -42,16 +42,16 @@
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
-          </div>
-          
-          <div class="wrap-input100 validate-input" data-validate = "Password is required">
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<input class="input100" type="password" name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
-          </div>
-          
+					</div>
+
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
@@ -64,13 +64,13 @@
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
 
 				</form>
 			</div>
