--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -86,7 +86,7 @@
 							<ul class="nav navbar-nav navbar-right">
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-											class="glyphicon glyphicon-user"></i></a>
+											class="glyphicon glyphicon-user"></i>{{email}}</a>
 									<ul class="dropdown-menu">
 										<li><a href="">My Profile</a></li>
 										<li><a href="">Settings</a></li>
@@ -108,14 +108,16 @@
 								<div class="col-sm-5">
 
 									<div class="panel panel-default">
-										<div class="panel-thumbnail"><img src="../static/img/bg_5.jpg" class="img-responsive">
+										<div class="panel-thumbnail"><img src="../static/img/bg_5.jpg"
+												class="img-responsive">
 										</div>
 										<div class="panel-body">
 											<p class="lead">Urbanization</p>
 											<p>45 Followers, 13 Posts</p>
 
 											<p>
-												<img src="../static/img/uFp_tsTJboUY7kue5XAsGAs28.png" height="28px" width="28px">
+												<img src="../static/img/uFp_tsTJboUY7kue5XAsGAs28.png" height="28px"
+													width="28px">
 											</p>
 										</div>
 									</div>
@@ -158,7 +160,8 @@
 											<h4>More Templates</h4>
 										</div>
 										<div class="panel-body">
-											<img src="../static/img/150x150.gif" class="img-circle pull-right"> <a href="#">Free
+											<img src="../static/img/150x150.gif" class="img-circle pull-right"> <a
+												href="#">Free
 												@Bootply</a>
 											<div class="clearfix"></div>
 											There a load of new free Bootstrap 3
@@ -207,14 +210,24 @@
 
 									<div class="panel panel-default">
 										<div class="panel-heading"><a href="#" class="pull-right">View all</a>
-											<h4>Lorem Ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi voluptates accusamus, quisquam saepe cumque deleniti illo exercitationem voluptas quae doloribus blanditiis possimus maiores quos optio officia libero quasi laudantium voluptatem!</h4>
+											<h4>Lorem Ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit.
+												Commodi voluptates accusamus, quisquam saepe cumque deleniti illo
+												exercitationem voluptas quae doloribus blanditiis possimus maiores quos
+												optio officia libero quasi laudantium voluptatem!</h4>
 										</div>
 										<div class="panel-body">
 											<p><img src="../static/img/150x150.gif" class="img-circle pull-right"> <a
 													href="#">Lorem ipsum</a></p>
 											<div class="clearfix"></div>
 											<hr>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempus elit quis quam faucibus, sed euismod magna molestie. Phasellus tortor sem, lobortis in augue at, ullamcorper maximus sapien. Aenean sed arcu id massa sodales ornare a at est. Quisque finibus neque et ornare tempus. Suspendisse potenti. Integer non aliquam nibh, ac eleifend elit. Pellentesque eget ligula lacus. Aenean blandit pretium tellus, ac tempor orci pellentesque ut. Curabitur sed leo et est rutrum varius. In mollis luctus elit. Morbi interdum ornare velit aliquet bibendum. 
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempus elit
+											quis quam faucibus, sed euismod magna molestie. Phasellus tortor sem,
+											lobortis in augue at, ullamcorper maximus sapien. Aenean sed arcu id massa
+											sodales ornare a at est. Quisque finibus neque et ornare tempus. Suspendisse
+											potenti. Integer non aliquam nibh, ac eleifend elit. Pellentesque eget
+											ligula lacus. Aenean blandit pretium tellus, ac tempor orci pellentesque ut.
+											Curabitur sed leo et est rutrum varius. In mollis luctus elit. Morbi
+											interdum ornare velit aliquet bibendum.
 										</div>
 									</div>
 
@@ -288,17 +301,17 @@
 								</div>
 							</div>
 
-							</div>
+						</div>
 
 
 
-						</div><!-- /col-9 -->
-					</div><!-- /padding -->
-				</div>
-				<!-- /main -->
-
+					</div><!-- /col-9 -->
+				</div><!-- /padding -->
 			</div>
+			<!-- /main -->
+
 		</div>
+	</div>
 	</div>
 
 
