Attempted to add image functionality

--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -4,14 +4,13 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8">
-	<title>Some Network</title>
+	<title>Acquaintance</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="../static/css/bootstrap.css" rel="stylesheet">
 	<link href="../static/css/news_feed.css" rel="stylesheet">
 </head>
 
 <body>
-
 	<div class="wrapper">
 		<div class="box">
 			<div class="row row-offcanvas row-offcanvas-left">
