--- a/templates/signup.html
+++ b/templates/signup.html
@@ -32,7 +32,8 @@
 					<img src="../static/img/letter-a.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" action="/register_user" method="post">
+				<form class="login100-form validate-form" action="/register_user" method="post"
+					enctype="multipart/form-data">
 					<span class="login100-form-title">
 						Member Sign Up
 					</span>
@@ -42,40 +43,47 @@
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
-          </div>
-          
-          <div class="wrap-input100 validate-input" data-validate = "Password is required">
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<input class="input100" type="password" name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
-          </div>
-          
-          <div class="wrap-input100 validate-input" data-validate="Username is required">
+					</div>
+
+					<!-- MY ATTEMPT AT IMAGE FETCHING -->
+					<input type="file" name="profilePhoto" size="40" id="profilePhoto">
+
+					<input name="profilePhotoPath" id="x" type="hidden">
+					<!-- MY ATTEMPT AT IMAGE FETCHING -->
+
+
+					<div class="wrap-input100 validate-input" data-validate="Username is required">
 						<input class="input100" type="text" name="username" placeholder="Username">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-person" aria-hidden="true"></i>
 						</span>
-          </div>
-          
-          <div class="wrap-input100 validate-input" data-validate="School is required">
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate="School is required">
 						<input class="input100" type="text" name="school" placeholder="School">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-person" aria-hidden="true"></i>
 						</span>
-          </div>
+					</div>
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
 							Sign Up
 						</button>
 					</div>
-          <br>
-          <br>
-          <br>
+					<br>
+					<br>
+					<br>
 
 				</form>
 			</div>
@@ -97,6 +105,14 @@
 	</script>
 
 	<script src="js/main.js"></script>
+	<script>
+		$('#profilePhoto').change(function (event) {
+			var tmppath = URL.createObjectURL(event.target.files[0]);
+			// var x = document.getElementById("profilePhoto").value;
+			$('#x').val(tmppath);
+			console.log(tmppath)
+		});
+	</script>
 
 </body>
 
