--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -22,13 +22,13 @@
 			contentType: "application/json"
 		}).done(function (o) {
 			var o2 = o;
-			var profiles =[];
-			console.log(o2.length)
+			var profiles = [];
+			// console.log(o2.length)
 			for (i = 0; i < o2.length; i++) {
-				profiles[i]=o2[i][1];
+				profiles[i] = o2[i][1];
 			}
 			// console.log("um");
-			console.log(profiles);
+			// console.log(profiles);
 			function autocomplete(inp, arr) {
 				/*the autocomplete function takes two arguments,
 				the text field element and an array of possible autocompleted values:*/
@@ -41,17 +41,23 @@
 					if (!val) { return false; }
 					currentFocus = -1;
 					/*create a DIV element that will contain the items (values):*/
-					a = document.createElement("DIV");
-					a.setAttribute("id", this.id + "autocomplete-list");
-					a.setAttribute("class", "autocomplete-items");
+					// a = document.createElement("DIV");
+					// a.setAttribute("id", this.id + "autocomplete-list");
+					// a.setAttribute("class", "autocomplete-items");
+
+					a = document.getElementById("json-datalist");
 					/*append the DIV element as a child of the autocomplete container:*/
-					this.parentNode.appendChild(a);
+					// this.parentNode.appendChild(a);
 					/*for each item in the array...*/
 					for (i = 0; i < arr.length; i++) {
 						/*check if the item starts with the same letters as the text field value:*/
 						if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
 							/*create a DIV element for each matching element:*/
-							b = document.createElement("DIV");
+							// b = document.createElement("DIV");
+
+							b = document.createElement('option');
+
+							b.value = arr[i].substr(0, val.length);
 							/*make the matching letters bold:*/
 							b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
 							b.innerHTML += arr[i].substr(val.length);
@@ -126,19 +132,6 @@
 				});
 			}
 
-			// $.ajax({
-			// 	type: "POST",
-			// 	url: "/search_profile",
-			// 	dataType: "json",
-			// 	contentType: "application/json"
-			// }).done(function (o) {
-			// 	var profiles = o;
-			// 	console.log("success");
-			// });
-
-			/*An array containing all the country names in the world:*/
-			// var countries = ["Afghanistan", "Albania", "Algeria", "Andorra", "Angola", "Anguilla", "Antigua & Barbuda", "Argentina", "Armenia", "Aruba", "Australia", "Austria", "Azerbaijan", "Bahamas", "Bahrain", "Bangladesh", "Barbados", "Belarus", "Belgium", "Belize", "Benin", "Bermuda", "Bhutan", "Bolivia", "Bosnia & Herzegovina", "Botswana", "Brazil", "British Virgin Islands", "Brunei", "Bulgaria", "Burkina Faso", "Burundi", "Cambodia", "Cameroon", "Canada", "Cape Verde", "Cayman Islands", "Central Arfrican Republic", "Chad", "Chile", "China", "Colombia", "Congo", "Cook Islands", "Costa Rica", "Cote D Ivoire", "Croatia", "Cuba", "Curacao", "Cyprus", "Czech Republic", "Denmark", "Djibouti", "Dominica", "Dominican Republic", "Ecuador", "Egypt", "El Salvador", "Equatorial Guinea", "Eritrea", "Estonia", "Ethiopia", "Falkland Islands", "Faroe Islands", "Fiji", "Finland", "France", "French Polynesia", "French West Indies", "Gabon", "Gambia", "Georgia", "Germany", "Ghana", "Gibraltar", "Greece", "Greenland", "Grenada", "Guam", "Guatemala", "Guernsey", "Guinea", "Guinea Bissau", "Guyana", "Haiti", "Honduras", "Hong Kong", "Hungary", "Iceland", "India", "Indonesia", "Iran", "Iraq", "Ireland", "Isle of Man", "Israel", "Italy", "Jamaica", "Japan", "Jersey", "Jordan", "Kazakhstan", "Kenya", "Kiribati", "Kosovo", "Kuwait", "Kyrgyzstan", "Laos", "Latvia", "Lebanon", "Lesotho", "Liberia", "Libya", "Liechtenstein", "Lithuania", "Luxembourg", "Macau", "Macedonia", "Madagascar", "Malawi", "Malaysia", "Maldives", "Mali", "Malta", "Marshall Islands", "Mauritania", "Mauritius", "Mexico", "Micronesia", "Moldova", "Monaco", "Mongolia", "Montenegro", "Montserrat", "Morocco", "Mozambique", "Myanmar", "Namibia", "Nauro", "Nepal", "Netherlands", "Netherlands Antilles", "New Caledonia", "New Zealand", "Nicaragua", "Niger", "Nigeria", "North Korea", "Norway", "Oman", "Pakistan", "Palau", "Palestine", "Panama", "Papua New Guinea", "Paraguay", "Peru", "Philippines", "Poland", "Portugal", "Puerto Rico", "Qatar", "Reunion", "Romania", "Russia", "Rwanda", "Saint Pierre & Miquelon", "Samoa", "San Marino", "Sao Tome and Principe", "Saudi Arabia", "Senegal", "Serbia", "Seychelles", "Sierra Leone", "Singapore", "Slovakia", "Slovenia", "Solomon Islands", "Somalia", "South Africa", "South Korea", "South Sudan", "Spain", "Sri Lanka", "St Kitts & Nevis", "St Lucia", "St Vincent", "Sudan", "Suriname", "Swaziland", "Sweden", "Switzerland", "Syria", "Taiwan", "Tajikistan", "Tanzania", "Thailand", "Timor L'Este", "Togo", "Tonga", "Trinidad & Tobago", "Tunisia", "Turkey", "Turkmenistan", "Turks & Caicos", "Tuvalu", "Uganda", "Ukraine", "United Arab Emirates", "United Kingdom", "United States of America", "Uruguay", "Uzbekistan", "Vanuatu", "Vatican City", "Venezuela", "Vietnam", "Virgin Islands (US)", "Yemen", "Zambia", "Zimbabwe"];
-			console.log(profiles)
 			/*initiate the autocomplete function on the "myInput" element, and pass along the countries array as possible autocomplete values:*/
 			autocomplete(document.getElementById("myInput"), profiles);
 		});
@@ -146,7 +139,6 @@
 </script>
 
 <body>
-
 	<div class="wrapper">
 		<div class="box">
 			<div class="row row-offcanvas row-offcanvas-left">
@@ -195,31 +187,28 @@
 							</button>
 							<a href="#" class="navbar-brand logo">N</a>
 						</div>
+						<!-- <form autocomplete="off" action="">
+								<div class="autocomplete" style="width:300px;">
+									
+								</div>
+								<button class="btn btn-default" type="submit"><i
+									class="glyphicon glyphicon-search"></i></button>
+							</form> -->
+
 						<nav class="collapse navbar-collapse" role="navigation">
-							<!-- <form class="navbar-form navbar-left">
+							<form class="navbar-form navbar-left">
 								<div class="input-group input-group-sm" style="max-width:360px;">
-									<input class="form-control" placeholder="Search" name="srch-term" id="srch-term"
-										type="text">
+									<input type="text" id="myInput" list="json-datalist" placeholder="e.g. datalist">
+									<datalist id="json-datalist">
+									</datalist>
+									<!-- <input id="myInput" type="text" name="Search" placeholder="Search"> -->
 									<div class="input-group-btn">
 										<button class="btn btn-default" type="submit"><i
 												class="glyphicon glyphicon-search"></i></button>
 									</div>
 								</div>
-							</form> -->
-
-							<form autocomplete="off" action="">
-								<div class="autocomplete" style="width:300px;">
-									<input id="myInput" type="text" name="myCountry" placeholder="Country">
-								</div>
-								<input type="submit">
 							</form>
 
-							<div>
-
-								<script>
-
-								</script>
-							</div>
 							<ul class="nav navbar-nav">
 								<li>
 									<a href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
