--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -29,6 +29,8 @@
 			}
 			// console.log("um");
 			// console.log(profiles);
+			// a = document.getElementById("json-datalist");
+			
 			function autocomplete(inp, arr) {
 				/*the autocomplete function takes two arguments,
 				the text field element and an array of possible autocompleted values:*/
@@ -46,6 +48,7 @@
 					// a.setAttribute("class", "autocomplete-items");
 
 					a = document.getElementById("json-datalist");
+					$( "#json-datalist" ).empty();
 					/*append the DIV element as a child of the autocomplete container:*/
 					// this.parentNode.appendChild(a);
 					/*for each item in the array...*/
@@ -187,21 +190,12 @@
 							</button>
 							<a href="#" class="navbar-brand logo">N</a>
 						</div>
-						<!-- <form autocomplete="off" action="">
-								<div class="autocomplete" style="width:300px;">
-									
-								</div>
-								<button class="btn btn-default" type="submit"><i
-									class="glyphicon glyphicon-search"></i></button>
-							</form> -->
-
 						<nav class="collapse navbar-collapse" role="navigation">
 							<form class="navbar-form navbar-left">
 								<div class="input-group input-group-sm" style="max-width:360px;">
-									<input type="text" id="myInput" list="json-datalist" placeholder="e.g. datalist">
+									<input type="text" id="myInput" list="json-datalist" placeholder="Search">
 									<datalist id="json-datalist">
 									</datalist>
-									<!-- <input id="myInput" type="text" name="Search" placeholder="Search"> -->
 									<div class="input-group-btn">
 										<button class="btn btn-default" type="submit"><i
 												class="glyphicon glyphicon-search"></i></button>
