--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,43 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<title>My profile</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    html,
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: "Roboto", sans-serif
+    }
 
-<head>
-    <title>Acquaintance</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    .fa {
+  color :#3b5999;
+}
+</style>
 
-    <link rel="icon" type="image/png" href="../static/img/icons/favicon.ico" />
+<body class="w3-light-grey">
 
-    <link rel="stylesheet" type="text/css" href="../static/vendor/bootstrap/css/bootstrap.min.css">
+    <!-- Page Container -->
+    <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
-    <link rel="stylesheet" type="text/css" href="../static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+        <!-- The Grid -->
+        <div class="w3-row-padding">
 
-    <link rel="stylesheet" type="text/css" href="../static/vendor/animate/animate.css">
+            <!-- Left Column -->
+            <div class="w3-third">
 
-    <link rel="stylesheet" type="text/css" href="../static/vendor/css-hamburgers/hamburgers.min.css">
+                <div class="w3-white w3-text-grey w3-card-4">
+                    <div class="w3-display-container">
+                        <img src="data:;base64,{{ image }}" style="width:100%" alt="Avatar">
+                        <div class="w3-display-bottomleft w3-container w3-text-black">
 
-    <link rel="stylesheet" type="text/css" href="../static/vendor/select2/select2.min.css">
+                        </div>
+                    </div>
+                    <div class="w3-container">
+                        <h2>Jane Doe</h2>
+                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>Designer</p>
+                        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Some Address</p>
+                        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>a@a.com</p>
+                        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text"></i>1234567890</p>
+                        <hr>
 
+                        <p class="w3-large"><b><i
+                                    class="fa fa-asterisk fa-fw w3-margin-right w3-text"></i>Followers</b></p>
 
-</head>
+                        <p>Nishanth</p>
+                        <p>Cool person</p>
+                        <p>A</p>
+                        <p>Be</p>
+                        <br>
 
-<body>
-    <div class="card">
-        <img src="data:;base64,{{ image }}" />
-        <h1>Rohit M P</h1>
-        <p class="title">CEO & Founder, Gayness</p>
-        <p>Lowda University</p>
-        <p><button>Contact</button></p>
+                        <p class="w3-large w3-text-theme"><b><i
+                                    class="fa fa-globe fa-fw w3-margin-right w3-text"></i>Following</b></p>
+                        <p>Nishanth</p>
+                        <p>Cool person</p>
+                        <p>A</p>
+                        <p>Be</p>
+                        <br>
+                    </div>
+                </div><br>
+
+                <!-- End Left Column -->
+            </div>
+
+            <!-- Right Column -->
+            <div class="w3-twothird">
+
+                <div class="w3-container w3-card w3-white w3-margin-bottom">
+                    <h2 class="w3-text-grey w3-padding-16"><i
+                            class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text"></i>Posts
+                    </h2>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Some Post</b></h5>
+                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
+                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
+                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
+                            iste.</p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Some Post</b></h5>
+                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
+                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
+                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
+                            iste.</p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Some Post</b></h5>
+                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
+                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
+                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
+                            iste.</p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Some Post</b></h5>
+                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
+                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
+                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
+                            iste.</p>
+                        <hr>
+                    </div>
+
+                </div>
+
+                <!-- End Right Column -->
+            </div>
+
+            <!-- End Grid -->
+        </div>
+
+        <!-- End Page Container -->
     </div>
 
-    <script src="../static/vendor/jquery/jquery-3.2.1.min.js"></script>
-
-    <script src="../static/vendor/bootstrap/js/popper.js"></script>
-    <script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <script src="../static/vendor/select2/select2.min.js"></script>
-
-    <script src="../static/vendor/tilt/tilt.jquery.min.js"></script>
 
 </body>
 
