Profile details corrected

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="w3-container">
                         <h2>Jane Doe</h2>
-                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>Designer</p>
+                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>NITK</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Some Address</p>
                         <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>a@a.com</p>
                         <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text"></i>1234567890</p>
