Added friend reqeust button and linked to function in server

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style>
     html,
     body,
@@ -19,8 +21,8 @@
     }
 
     .fa {
-  color :#3b5999;
-}
+        color: #3b5999;
+    }
 </style>
 
 <body class="w3-light-grey">
@@ -41,16 +43,19 @@
 
                         </div>
                     </div>
+                    <br>
                     <div class="w3-container">
                         <h2>Jane Doe</h2>
                         <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>NITK</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Some Address</p>
                         <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>a@a.com</p>
                         <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text"></i>1234567890</p>
+                        <a href="/send_friend_request"> <button type="button" class="btn btn-success">Send friend
+                            request</button></a>
                         <hr>
 
-                        <p class="w3-large"><b><i
-                                    class="fa fa-asterisk fa-fw w3-margin-right w3-text"></i>Followers</b></p>
+                        <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text"></i>Followers</b>
+                        </p>
 
                         <p>Nishanth</p>
                         <p>Cool person</p>
@@ -124,5 +129,14 @@
 
 
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 </html>
