Added dynamic profile url

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -48,7 +48,7 @@
                         <h2>Jane Doe</h2>
                         <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>NITK</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Some Address</p>
-                        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>a@a.com</p>
+                        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>{{email}}</p>
                         <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text"></i>1234567890</p>
                         <a href="/send_friend_request"> <button type="button" class="btn btn-success">Send friend
                             request</button></a>
