--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,7 +45,7 @@
                     </div>
                     <br>
                     <div class="w3-container">
-                        <h2>Jane Doe</h2>
+                        <h2>{{username}}</h2>
                         <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>NITK</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Some Address</p>
                         <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>{{email}}</p>
