Removed email in news_feed url

--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -160,10 +160,10 @@
 <body>
 	<div class="wrapper">
 		<div class="box">
-			<div class="row row-offcanvas row-offcanvas-left">
+			<div class="row row-offcanvas ">
 
 				<!-- sidebar -->
-				<div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
+				<!-- <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
 
 					<ul class="nav">
 						<li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i
@@ -176,11 +176,11 @@
 						<li><a href="#stories"><i class="glyphicon glyphicon-list"></i> Stories</a></li>
 						<li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Saved</a></li>
 						<li><a href="#"><i class="glyphicon glyphicon-refresh"></i> Refresh</a></li>
-					</ul>
+					</ul> -->
 
 
-					<!-- tiny only nav-->
-					<ul class="nav visible-xs" id="xs-menu">
+				<!-- tiny only nav-->
+				<!-- <ul class="nav visible-xs" id="xs-menu">
 						<li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a>
 						</li>
 						<li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
@@ -188,11 +188,11 @@
 						<li><a href="#" class="text-center"><i class="glyphicon glyphicon-refresh"></i></a></li>
 					</ul>
 
-				</div>
+				</div> -->
 				<!-- /sidebar -->
 
 				<!-- main right col -->
-				<div class="column col-sm-10 col-xs-11" id="main">
+				<div class="column col-sm-12 col-xs-12" id="main">
 
 					<!-- top nav -->
 					<div class="navbar navbar-blue navbar-static-top">
