--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,6 +8,26 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="../static/css/bootstrap.css" rel="stylesheet">
+<link href="../static/css/news_feed.css" rel="stylesheet">
+<!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<link rel="stylesheet" href="/resources/demos/style.css"> -->
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="../static/js/bootstrap.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('[data-toggle=offcanvas]').click(function () {
+            $(this).toggleClass('visible-xs text-center');
+            $(this).find('i').toggleClass('glyphicon-chevron-right glyphicon-chevron-left');
+            $('.row-offcanvas').toggleClass('active');
+            $('#lg-menu').toggleClass('hidden-xs').toggleClass('visible-xs');
+            $('#xs-menu').toggleClass('visible-xs').toggleClass('hidden-xs');
+            $('#btnShow').toggle();
+        });
+    });
+</script>
 <style>
     html,
     body,
@@ -25,110 +45,194 @@
     }
 </style>
 
-<body class="w3-light-grey">
 
-    <!-- Page Container -->
-    <div class="w3-content w3-margin-top" style="max-width:1400px;">
+<body>
+    <div >
+        <!-- <div class="wrapper">
+        <div class="box">
+            <div class="row row-offcanvas row-offcanvas-left"> -->
 
-        <!-- The Grid -->
-        <div class="w3-row-padding">
+        <div class="column col-sm-12 col-xs-12" id="main">
 
-            <!-- Left Column -->
-            <div class="w3-third">
+            <div class="navbar navbar-blue navbar-static-top" style="display: block;">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#" class="navbar-brand logo">N</a>
+                </div>
+                <nav class="collapse navbar-collapse" role="navigation">
+                    <form class="navbar-form navbar-left">
+                        <div class="input-group input-group-sm" style="max-width:360px;">
+                            <input type="text" id="myInput" list="json-datalist" placeholder="Search">
+                            <datalist id="json-datalist">
+                            </datalist>
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i
+                                        class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
 
-                <div class="w3-white w3-text-grey w3-card-4">
-                    <div class="w3-display-container">
-                        <img src="data:;base64,{{ image }}" style="width:100%" alt="Avatar">
-                        <div class="w3-display-bottomleft w3-container w3-text-black">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="/news_feed/{{email}}"><i class="glyphicon glyphicon-home"></i> Home</a>
+                        </li>
+                        <!-- <li>
+                            <a href="#postModal" role="button" data-toggle="modal"><i
+                                    class="glyphicon glyphicon-plus"></i>
+                                Post</a>
+                        </li>
+                        <li>
+                            <a href="/chat"><span class="badge">Chat</span></a>
+                        </li> -->
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
+                                    class="glyphicon glyphicon-user"></i>{{email}}</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="">My Profile</a></li>
+                                <li><a href="">Settings</a></li>
+                                <li><a href="">Log out</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- </div> -->
+            <!-- /top nav -->
+            <!-- Page Container -->
+            <br>
+            <br>
+            <br>
+            <div class="w3-content w3-margin-top" style="max-width:1400px;">
+
+                <!-- The Grid -->
+                <div class="w3-row-padding">
+
+                    <!-- Left Column -->
+                    <div class="w3-third">
+
+                        <div class="w3-white w3-text-grey w3-card-4">
+                            <div class="w3-display-container">
+                                <img src="data:;base64,{{ image }}" style="width:100%" alt="Avatar">
+                                <div class="w3-display-bottomleft w3-container w3-text-black">
+
+                                </div>
+                            </div>
+                            <br>
+                            <div class="w3-container">
+                                <h2>{{username}}</h2>
+                                <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>NITK
+                                </p>
+                                <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Some Address
+                                </p>
+                                <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>{{email}}
+                                </p>
+                                <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text"></i>1234567890
+                                </p>
+                                <a href="/send_friend_request"> <button type="button" class="btn btn-success">Send
+                                        friend
+                                        request</button></a>
+                                <hr>
+
+                                <p class="w3-large"><b><i
+                                            class="fa fa-asterisk fa-fw w3-margin-right w3-text"></i>Followers</b>
+                                </p>
+
+                                <p>Nishanth</p>
+                                <p>Cool person</p>
+                                <p>A</p>
+                                <p>Be</p>
+                                <br>
+
+                                <p class="w3-large w3-text-theme"><b><i
+                                            class="fa fa-globe fa-fw w3-margin-right w3-text"></i>Following</b>
+                                </p>
+                                <p>Nishanth</p>
+                                <p>Cool person</p>
+                                <p>A</p>
+                                <p>Be</p>
+                                <br>
+                            </div>
+                        </div><br>
+
+                        <!-- End Left Column -->
+                    </div>
+
+                    <!-- Right Column -->
+                    <div class="w3-twothird">
+
+                        <div class="w3-container w3-card w3-white w3-margin-bottom">
+                            <h2 class="w3-text-grey w3-padding-16"><i
+                                    class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text"></i>Posts
+                            </h2>
+                            <div class="w3-container">
+                                <h5 class="w3-opacity"><b>Some Post</b></h5>
+                                <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015
+                                </h6>
+                                <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt
+                                    aspernatur est
+                                    reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque
+                                    repellendus iure,
+                                    iste.</p>
+                                <hr>
+                            </div>
+                            <div class="w3-container">
+                                <h5 class="w3-opacity"><b>Some Post</b></h5>
+                                <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015
+                                </h6>
+                                <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt
+                                    aspernatur est
+                                    reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque
+                                    repellendus iure,
+                                    iste.</p>
+                                <hr>
+                            </div>
+                            <div class="w3-container">
+                                <h5 class="w3-opacity"><b>Some Post</b></h5>
+                                <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015
+                                </h6>
+                                <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt
+                                    aspernatur est
+                                    reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque
+                                    repellendus iure,
+                                    iste.</p>
+                                <hr>
+                            </div>
+                            <div class="w3-container">
+                                <h5 class="w3-opacity"><b>Some Post</b></h5>
+                                <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015
+                                </h6>
+                                <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt
+                                    aspernatur est
+                                    reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque
+                                    repellendus iure,
+                                    iste.</p>
+                                <hr>
+                            </div>
 
                         </div>
-                    </div>
-                    <br>
-                    <div class="w3-container">
-                        <h2>{{username}}</h2>
-                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>NITK</p>
-                        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Some Address</p>
-                        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>{{email}}</p>
-                        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text"></i>1234567890</p>
-                        <a href="/send_friend_request"> <button type="button" class="btn btn-success">Send friend
-                            request</button></a>
-                        <hr>
 
-                        <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text"></i>Followers</b>
-                        </p>
-
-                        <p>Nishanth</p>
-                        <p>Cool person</p>
-                        <p>A</p>
-                        <p>Be</p>
-                        <br>
-
-                        <p class="w3-large w3-text-theme"><b><i
-                                    class="fa fa-globe fa-fw w3-margin-right w3-text"></i>Following</b></p>
-                        <p>Nishanth</p>
-                        <p>Cool person</p>
-                        <p>A</p>
-                        <p>Be</p>
-                        <br>
-                    </div>
-                </div><br>
-
-                <!-- End Left Column -->
-            </div>
-
-            <!-- Right Column -->
-            <div class="w3-twothird">
-
-                <div class="w3-container w3-card w3-white w3-margin-bottom">
-                    <h2 class="w3-text-grey w3-padding-16"><i
-                            class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text"></i>Posts
-                    </h2>
-                    <div class="w3-container">
-                        <h5 class="w3-opacity"><b>Some Post</b></h5>
-                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
-                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
-                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
-                            iste.</p>
-                        <hr>
-                    </div>
-                    <div class="w3-container">
-                        <h5 class="w3-opacity"><b>Some Post</b></h5>
-                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
-                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
-                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
-                            iste.</p>
-                        <hr>
-                    </div>
-                    <div class="w3-container">
-                        <h5 class="w3-opacity"><b>Some Post</b></h5>
-                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
-                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
-                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
-                            iste.</p>
-                        <hr>
-                    </div>
-                    <div class="w3-container">
-                        <h5 class="w3-opacity"><b>Some Post</b></h5>
-                        <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015</h6>
-                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
-                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
-                            iste.</p>
-                        <hr>
+                        <!-- End Right Column -->
                     </div>
 
+                    <!-- End Grid -->
                 </div>
 
-                <!-- End Right Column -->
+                <!-- End Page Container -->
             </div>
 
-            <!-- End Grid -->
         </div>
-
-        <!-- End Page Container -->
-    </div>
-
-
+        <!-- </div>
+        </div>
+    </div> -->
 </body>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
