Edit profile works, friend request needs completion

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -56,7 +56,7 @@
 					<!-- MY ATTEMPT AT IMAGE FETCHING -->
 					<input type="file" name="profilePhoto" size="40" id="profilePhoto">
 
-					<input name="profilePhotoPath" id="x" type="hidden">
+					<!-- <input name="profilePhotoPath" id="x" type="hidden"> -->
 					<!-- MY ATTEMPT AT IMAGE FETCHING -->
 
 
