--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -152,10 +152,11 @@
                                                 </button>
                                             </div>
                                             <div class="modal-body" style="padding:20px">
-                                                <form>
+                                                <form action="/edit_profile"
+                                                    method="post" enctype="multipart/form-data">
                                                     <div class="form-group">
                                                         <label for="Username" class="col-form-label">Username:</label>
-                                                        <input type="text" class="form-control" id="Username">
+                                                        <input type="text" class="form-control" name="Username">
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="School" class="col-form-label">School:</label>
@@ -175,17 +176,18 @@
                                                         <input type="text" class="form-control" id="recipient-name">
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="profilePhoto" class="col-form-label">Profile Photo:</label>
+                                                        <label for="profilePhoto" class="col-form-label">Profile
+                                                            Photo:</label>
                                                         <input type="file" name="profilePhoto" size="40"
                                                             id="profilePhoto">
                                                     </div>
-                                                </form>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary"
                                                     data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Send message</button>
+                                                <button type="submit" class="btn btn-primary">Send message</button>
                                             </div>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
