Search profile pending

--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -207,7 +207,7 @@
 							<a href="#" class="navbar-brand logo">N</a>
 						</div>
 						<nav class="collapse navbar-collapse" role="navigation">
-							<form class="navbar-form navbar-left">
+							<form class="navbar-form navbar-left" action="/search_profile">
 								<div class="input-group input-group-sm" style="max-width:360px;">
 									<input type="text" id="myInput" list="json-datalist" placeholder="Search">
 									<datalist id="json-datalist">
