Added friend request

--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -207,9 +207,9 @@
 							<a href="#" class="navbar-brand logo">N</a>
 						</div>
 						<nav class="collapse navbar-collapse" role="navigation">
-							<form class="navbar-form navbar-left" action="/search_profile">
+							<form class="navbar-form navbar-left" action="/search_results" method="post">
 								<div class="input-group input-group-sm" style="max-width:360px;">
-									<input type="text" id="myInput" list="json-datalist" placeholder="Search">
+									<input type="text" id="username" name="username" placeholder="Search">
 									<datalist id="json-datalist">
 									</datalist>
 									<div class="input-group-btn">
