--- a/templates/profile.html
+++ b/templates/profile.html
@@ -140,7 +140,7 @@
                                     <script>
                                         document.getElementById('hidden').value = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
                                     </script>
-                                    <button class="btn btn-success" type="submit"> Send friend request</button>
+                                    <button class="btn btn-success" type="submit" onclick="this.disabled=true"> Send friend request</button>
                                 </form>
                                 <!-- <a href="/send_friend_request"> <button type="button" class="btn btn-success">Send
                                         friend
