--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -243,7 +243,7 @@
 								</li> -->
 								<li class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown"><i
-											class="glyphicon glyphicon-user"></i>{{email}}</a>
+											class="glyphicon glyphicon-user"></i>{{myEmail}}</a>
 									<ul class="dropdown-menu">
 										<li><a href="\myProfile">My Profile</a></li>
 										<li><a href="">Settings</a></li>
