--- a/templates/display_profiles.html
+++ b/templates/display_profiles.html
@@ -62,41 +62,104 @@
     }
 </style>
 
-<h1 style="text-align: center;">Search Results</h1>
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
-    {% for profile in profiles %}
-    {% if profile['email'] != myEmail%}
-    <a class="w3-white w3-text-grey w3-card-4" style="display:block" href="/profile/{{profile['email']}}">
-        <div class="w3-row-padding">
-            <div class="w3-third">
-                <!-- <div class="w3-white w3-text-grey w3-card-4"> -->
-                <!-- <div class="w3-display-container"> -->
-                <img src="data:;base64,{{profile['photo'] }}" style="width:60%; height:250px" alt="Avatar">
-                <div class="w3-display-bottomleft w3-container w3-text-black">
-                </div>
-                <br>
-                <!-- </div> -->
-                <!-- </div> -->
-            </div>
-            <div class="w3-twothird">
-                <!-- <div class=w3-card w3-white w3-margin-bottom"> -->
-                <h2 class="w3-text-grey w3-padding-16"><i
-                        class="fa fa-user fa-fw w3-margin-right w3-xxlarge w3-text"></i>Username :
-                    {{profile['username']}}
-                </h2>
-                <h2 class="w3-text-grey w3-padding-16"><i
-                        class="fa fa-envelope fa-fw w3-margin-right w3-xxlarge w3-text"></i>Email :
-                    {{profile['email']}}
-                </h2>
+<body>
+    <div>
+        <div class="column col-sm-12 col-xs-12" id="main">
 
+
+
+            <div class="navbar navbar-blue navbar-static-top" style="display: block;">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#" class="navbar-brand logo">N</a>
+                </div>
+                <nav class="collapse navbar-collapse" role="navigation">
+                    <form class="navbar-form navbar-left" action="/search_results" method="post">
+                        <div class="input-group input-group-sm" style="max-width:360px;">
+                            <input type="text" id="username" name="username" placeholder="Search">
+                            <datalist id="json-datalist">
+                            </datalist>
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i
+                                        class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="/news_feed"><i class="glyphicon glyphicon-home"></i> Home</a>
+                        </li>
+                        <!-- <li>
+                <a href="#postModal" role="button" data-toggle="modal"><i
+                        class="glyphicon glyphicon-plus"></i>
+                    Post</a>
+            </li>
+            <li>
+                <a href="/chat"><span class="badge">Chat</span></a>
+            </li> -->
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
+                                    class="glyphicon glyphicon-user"></i>{{email}}</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/myProfile">My Profile</a></li>
+                                <li><a href="/settings">Settings</a></li>
+                                <li><a href="">Log out</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- </div> -->
+            <!-- /top nav -->
+            <!-- Page Container -->
+            <br>
+            <br>
+            <br>
+
+            <h1 style="text-align: center;">Search Results</h1>
+            <div class="w3-content w3-margin-top" style="max-width:1200px;">
+                {% for profile in profiles %}
+                {% if profile['email'] != myEmail%}
+                <a class="w3-white w3-text-grey w3-card-4" style="display:block; border-radius: 1em;" href="/profile/{{profile['email']}}">
+                    <div class="w3-row-padding">
+                        <div class="w3-third">
+                            <!-- <div class="w3-white w3-text-grey w3-card-4"> -->
+                            <!-- <div class="w3-display-container"> -->
+                            <img src="data:;base64,{{profile['photo'] }}" style="width:60%; height:250px; padding:1em" alt="Avatar">
+                            <div class="w3-display-bottomleft w3-container w3-text-black">
+                            </div>
+                            <br>
+                            <!-- </div> -->
+                            <!-- </div> -->
+                        </div>
+                        <div class="w3-twothird">
+                            <!-- <div class=w3-card w3-white w3-margin-bottom"> -->
+                            <h2 class="w3-text-grey w3-padding-16"><i
+                                    class="fa fa-user fa-fw w3-margin-right w3-xxlarge w3-text"></i>Username :
+                                {{profile['username']}}
+                            </h2>
+                            <h2 class="w3-text-grey w3-padding-16"><i
+                                    class="fa fa-envelope fa-fw w3-margin-right w3-xxlarge w3-text"></i>Email :
+                                {{profile['email']}}
+                            </h2>
+
+                        </div>
+                    </div>
+                </a>
+                <br>
+                {% endif %}
+                {% endfor %}
             </div>
         </div>
-    </a>
-    <br>
-    {% endif %}
-    {% endfor %}
-</div>
-
+</body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
